# ballistic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  design.md  error_log.txt  imgui.ini
.stack_overflow/1/: CMakeLists.txt  main.cpp  question.md
Ballistic/: Ballistic.h  CMakeLists.txt  bepch.h
Ballistic/Core/: IApplication.cpp  IApplication.h  Root.cpp  Root.h
Ballistic/Core/Layers/: Events.h  IEvent.h  ILayer.h  Layerstack.cpp  Layerstack.h
Ballistic/Core/LogManager/: Log.h  LogManager.cpp  LogManager.h
Ballistic/Core/Logging/: Log.h  Logger.cpp  Logger.h
Ballistic/Core/Window/: Window.cpp  Window.h  WindowInfo.h
Ballistic/Entry/: Entrypoint.cpp  Entrypoint.h  WinMainWrapper.cpp
Ballistic/Renderer/: DrawElementsIndirectCommand.h  RenderCommand.h  Renderer.cpp  Renderer.h
Ballistic/Renderer/RenderDevice/: GLRenderDevice.cpp  GLRenderDevice.h  IRenderDevice.h
Ballistic/Root/: Root.cpp  Root.h  Singleton.h
Ballistic/Root/LogManager/: Log.h  LogManager.cpp  LogManager.h
Ballistic/Root/MeshManager/: MeshManager.cpp  MeshManager.h  MeshMetadata.h  Vertex.h
Ballistic/Root/ProjectManager/: ProjectManager.cpp  ProjectManager.h
Ballistic/Scene/: Components.h  EntityHandle.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Ballistic/Scene/Components/: Components.h
Ballistic/Utility/: GUID.cpp  GUID.h
Ballistic/include/: Ballistic.h  bepch.h
Ballistic/include/Core/: Application.h
Ballistic/include/Renderer/: IRenderer.h  Renderer.h
Ballistic/res/shaders/: pathTracing.comp
Ballistic/src/: Ballistic.h  BallisticEntrypoint.h  bepch.h  lrpch.h
Ballistic/src/Core/: Application.cpp  Application.h  Config.cpp  Config.h  GUID.h  IWindow.cpp  IWindow.h  application.cpp  application.h
Ballistic/src/Entry/: BallisticEntrypoint.h
Ballistic/src/Project/: ProjectManager.cpp  ProjectManager.h
Ballistic/src/Renderer/: IRenderer.cpp  OglRenderer.cpp  OglRenderer.h  Renderer.cpp  Renderer.h  VkRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
BallisticEditor/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  ImGuiLayer.cpp  ImGuiLayer.h  icon.rc
BallisticEditor/Panels/: ConsolePanel.cpp  ConsolePanel.h  DemoPanel.cpp  DemoPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  IPanel.cpp  IPanel.h  InspectorPanel.cpp  InspectorPanel.h  LauncherPanel.cpp  LauncherPanel.h  MenuPanel.cpp  MenuPanel.h  PanelStack.cpp  PanelStack.h  ViewportPanel.cpp  ViewportPanel.h
BallisticEditor/src/: EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  ImGuiContext.cpp  ImGuiContext.h
BallisticEditor/src/Panels/: IPanel.h
BallisticRuntime/: CMakeLists.txt  RuntimeMain.cpp
BallisticRuntime/src/: RuntimeLayer.cpp  RuntimeLayer.h  RuntimeMain.cpp
Engine/: Ballistic.h  CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  Config.cpp  Config.h  Utils.h
Engine/Core/Layers/: Event.h  Layer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp
Engine/Core/Window/: ImGuiSystem.cpp  Window.cpp  WindowInfo.h
Engine/Project/: ProjectManager.cpp  ProjectManager.h
Engine/Project/Assets/: AssetPool.h
Engine/Project/Scene/: Components.h  Scene.cpp  Scene.h  SceneManager.cpp
Engine/Renderer/: RenderCommand.h  RenderDevice.h  Renderer.cpp  Renderer.h  RendererTypes.h
Engine/res/: CMakeLists.txt  Resources.h  Resources.rc  Shaders.h
Engine/res/Shaders/: sprite.frag  sprite.vert
Engine/src/: pch.h
Engine/src/Core/: Application.cpp  Window.cpp  Window.h
Engine/src/Graphics/: Renderer.cpp  Renderer.h
Engine/src/Impl/: vk_mem_alloc_impl.cpp
EngineEditor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  EditorTheme.cpp
EngineEditor/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.h  ViewportPanel.cpp
EngineEditor/src/: EditorTheme.h
EngineEditor/src/Panels/: InspectorPanel.cpp  MenuBar.cpp
Game/: CMakeLists.txt
Game/src/: GameApplication.cpp
app/: CMakeLists.txt  main_editor.cpp  main_game.cpp  main_game_dev_tools.cpp
app/resources/: console_wrapper.rc  editor.rc  game.rc  game_dev_tools.rc
app/windows/: main_editor.cpp
drivers/: CMakeLists.txt
drivers/imgui/: imgui_driver.cpp  imgui_driver.h  imgui_texture_cache.cpp  imgui_texture_cache.h
drivers/vulkan/: ballistic_vulkan.h  context_driver_vulkan.cpp  context_driver_vulkan.h  device_driver_vulkan.cpp  device_driver_vulkan.h  rendering_context_driver_vulkan.cpp  rendering_context_driver_vulkan.h  rendering_device_driver_vulkan.cpp  rendering_device_driver_vulkan.h  rendering_driver_vulkan.h  vk_mem_alloc_impl.cpp  vulkan_hooks.h
drivers/windows/: window_driver_win32.cpp  window_driver_win32.h  window_driver_windows.cpp  window_driver_windows.h
editor/: CMakeLists.txt  editor.cpp  editor.h  editor_application.cpp  editor_application.h  editor_context.h  editor_settings.cpp  editor_settings.h  panel.h
editor/debugger/: debugger.cpp  debugger.h
editor/panels/: viewport_panel.cpp  viewport_panel.h
editor/project_manager/: project_manager.cpp  project_manager.h
editor/resources/: editor_app.rc  editor_console.rc
editor/settings/: settings.cpp  settings.h
editor/src/: EditorApplication.cpp  EditorApplication.h  editor_app.cpp  editor_app.h  editor_application.cpp  editor_application.h  main.cpp
editor/src/editor/: app_data.cpp  (+11 more)
editor/viewport/: viewport.cpp  viewport.h
engine/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/res/: CMakeLists.txt  resources.h  resources.rc  shaders.h
engine/src/: pch.h
engine/vulkan/: CMakeLists.txt  ballistic_vulkan.h
game/: CMakeLists.txt  game_application.cpp  game_application.h
game/src/: GameApplication.cpp  GameApplication.h  game_app.cpp  game_app.h  game_application.cpp  main.cpp
launcher/: CMakeLists.txt  launcher_application.cpp  launcher_application.h  main.cpp
platform/windows/: CMakeLists.txt  ballistic_console_wrapper.cpp  ballistic_main.cpp  ballistic_res.rc  ballistic_res_app.rc  ballistic_res_app_dev.rc  ballistic_res_console.rc  console_wrapper.cpp  main_editor.cpp  main_game.cpp
vk/: CMakeLists.txt  pch.h
(+619 files in other folders)
